Updates and timeline
Signed-off-by: Arnaud Porterie <arnaud.porterie@docker.com>

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: post-index
-title: "Welcome to the Neo-HPSTR Blog"
-description: "Describe this nonsense."
-tags: [Jekyll, theme, themes, responsive, blog, modern]
+title: "icecrime - Arnaud Porterie"
+description: "Personal website and blog"
+tags: [icecrime, docker, engineering, tech, startup, management]
 ---
 
 {% for post in paginator.posts %}
