--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: post-index
-title: "icecrime - Arnaud Porterie"
+title: "icecrime"
 description: "Personal website and blog"
 tags: [icecrime, docker, engineering, tech, startup, management]
 ---
